Report the outermost jarfile as the file of a nested jarfile
The classpath element file of a jarfile nested within another jarfile
was documented as the outermost jarfile, but was whatever the nested
jarfile's bytes were read from: the outer jarfile if it was stored, null
if it was deflated and inflated into RAM, and a temporary file, deleted
when the scan result closed, if it was deflated and larger than that.
Two nested jarfiles in the same jarfile could report different files.

VfsRoot.getFile() and getNioPath() of a nested jarfile's root now return
those of the enclosing root, so they reach the outermost jarfile.
ScanResult.getClasspathFiles() lists that jarfile once, since it was
documented to list unique files.

ClassInfo.getClasspathElementFile() also said it returns null for any
module; it returns the file of a module loaded from one.